Recruitment: ApplicationDetailsController updates
Made-with: Cursor